# misp-install

./: .gitignore  .ruffignore  ACL-FIX-SUMMARY.md  BRANCHES.md  CHANGELOG-LOGGING-UPDATE.md  CI_CD_FILE_TREE.txt  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DASHBOARD_COMPLETE.md  EVENT_POPULATION_FIX.md  EXCLUSION_LIST_DESIGN.md  FEED_MANAGEMENT_COMPLETE.md  ICS-CSIRT_MEMBERSHIP_EMAIL.md  KNOWN-ISSUES.md  MISP_COMMUNITIES_GUIDE.md  MISP_CONFIGURATION_STATUS.md  NEXT_STEPS.md  README.md  README_LOGGING.md  REFACTORING_PLAN.md  REFACTORING_RECOMMENDATIONS.md  REMAINING_UPDATES.md  REMAINING_UPDATES.md.archived  RESEARCH_TASKS_PERSON_1.md  RESEARCH_TASKS_PERSON_3.md  SCRIPTS.md  SCRIPT_UPDATE_STATUS.md  SESSION_SUMMARY.md  SETUP.md  TEST-RUN-RESULTS.md  TIMEFRAME_FORMAT_FIX.md  TODO.md  UPDATE_SUMMARY.md  WIDGET_FIX_SUMMARY.md  WIDGET_LIMITATIONS.md  WIDGET_RESET_COMPLETE.md  check_deps.py  install-gui.sh  misp-install-v5.4-monolithic.py.backup  misp-install.py  (+9 more)
.github/: README_BADGES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  nerc_cip_question.yml
.github/workflows/: ci.yml  release.yml
config/: .env.enterprise-template  README.md  misp-config-production.yaml  misp-gui-config-20251015_181033.json  misp-gui-config-20251015_185330.json  production-deployment-full-example.json  production-deployment.json  test-debug-full.json  test-debug.json  test-full-install.json
config/examples/: README.md  custom-exclusions.json  full-install.json  minimal-install.json  no-automation.json
config/for_testing/: misp-gui-config-20251014_130953.json  misp-gui-config-20251014_131846.json  misp-gui-config-20251014_132520.json  misp-gui-config-20251014_132911.json  misp-gui-config-20251014_133309.json
deprecated/: README.md
deprecated/docs/: ACL-FIX-SUMMARY.md  DOCUMENTATION_REVIEW.md
deprecated/scripts/: add-nerc-cip-news-feeds-api.py  check-misp-feeds-api.py  populate-misp-news-complete.py
docs/: ADVANCED-FEATURES.md  API_USAGE.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AZURE-ENTRA-ID-SETUP.md  BRANCHING_MIGRATION_GUIDE.md  BRANCHING_STRATEGY.md  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CI_CD_GUIDE.md  COMPLETE-FILE-LAYOUT.md  CONFIGURATION-BEST-PRACTICES.md  CONFIGURATION-GUIDE.md  CONTRIBUTING.md  GUI_INSTALLER.md  INDEX.md  INSTALLATION-CHECKLIST.md  INSTALLATION.md  MAINTENANCE.md  MAINTENANCE_AUTOMATION.md  MISP-BACKUP-CRON.md  MISP-UPDATE.md  MISP_QUIRKS.md  NERC_CIP_AUDIT_REPORT.md  NERC_CIP_CONFIGURATION.md  NERC_CIP_IMPLEMENTATION_GUIDE.md  NERC_CIP_MEDIUM_ARCHITECTURE.md  ONBOARDING.md  PATTERNS.md  PRODUCTION_STATE.md  PROJECT_KNOWLEDGE.md  QUICKSTART.md  README.md  README_LOGGING.md  READY-TO-RUN-SETUP.md  REFACTORING_SUMMARY.md  REPOSITORY-STRUCTURE.md  ROADMAP.md  SECURITY_ARCHITECTURE.md  SYSTEMD_SERVICE.md  (+4 more)
docs/archive/: README.md
docs/development/: BRANCHING_QUICK_REFERENCE.md
docs/nerc-cip/: CONFIGURATION.md  PRODUCTION_READINESS_TASKS.md  README.md
docs/releases/: V5.6_RELEASE_NOTES.md
lib/: __init__.py  backup_manager.py  colors.py  config.py  cron_helpers.py  database_manager.py  docker_helpers.py  docker_manager.py  features.py  feed_constants.py  logging_setup.py  misp_api_helpers.py  misp_config.py  setup_helper.py  state_manager.py  system_checker.py  user_manager.py  validation.py  validators.py
phases/: __init__.py  base_phase.py  phase_01_dependencies.py  phase_02_docker_group.py  phase_03_backup.py  phase_04_cleanup.py  phase_05_clone.py  phase_06_configuration.py  phase_07_ssl.py  phase_08_dns.py  phase_09_passwords.py  phase_10_docker_build.py  phase_11_10_security_news.py  phase_11_11_utilities_dashboards.py  phase_11_5_api_key.py  phase_11_7_threat_feeds.py  phase_11_8_utilities_sector.py  phase_11_9_automated_maintenance.py  phase_11_initialization.py  phase_12_post_install.py  phase_13_validation.py
scripts/: README.md  add-ics-ot-threat-feeds.py  add-nerc-cip-news-feeds.py  add-threat-feeds.py  analyze-dry-violations.py  backup-misp.py  backup-misp.sh  check-misp-feeds-api.py  check-misp-feeds.py  configure-all-dashboards.py  configure-misp-nerc-cip.py  configure-misp-ready.py  configure-misp-utilities-sector.py  create-utilities-sector-intelligence.py  enable-misp-feeds.py  event_templates.py  fetch-all-feeds.py  fix-threatfox-feed.py  health-check-advanced-features.py  inspect-misp-instance.sh  install-utilities-dashboard.sh  list-misp-communities.py  manage-all-feeds.py  misp-backup-cron.py  misp-daily-maintenance.py  misp-restore.py  misp-setup-complete.py  misp-update.py  misp-weekly-maintenance.py  misp.service  misp_logger.py  populate-misp-news-api.py  populate-misp-news.py  populate-utilities-events.py  populate-widget-events.py  reset-all-widgets.py  setup-branch-protection.sh  setup-feed-cron.py  setup-misp-maintenance-cron.sh  setup-misp-systemd.sh  (+5 more)
tests/: README.md  __init__.py  conftest.py  test_misp_config.py  test_misp_logger.py  test_misp_password.py
widgets/: BaseUtilitiesWidget.php.DONOTINSTALL  DASHBOARD_WIDGET_FIXES.md  DRY_REFACTORING_SUMMARY.md  UtilitiesWidgetConstants.php  install-base-files.sh
(+81 files in other folders)
